--- a/filterWADATI.ipynb
+++ b/filterWADATI.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nCoding: PYTHON UTF-8\\nCreated On: 2023-04-28 12:39:30\\nAuthor: Putu Hendra Widyadharma\\n=== filter .pha using wadati result from makeWADATI \\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Coding: PYTHON UTF-8\n",
@@ -16,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,20 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'G:\\\\My Drive\\\\Tomography\\\\270423\\\\'\n",
-    "fname = 'phase_sul_2022_8P_fix.dat'\n",
-    "fname2 = 'temppha_phase_sul_2022_8P_fix.txt'\n",
-    "fname3 = 'tempwadati_phase_sul_2022_8P_fix.txt'\n",
+    "path = 'G:\\\\My Drive\\\\Tomography\\\\280423\\\\output-tomodd-relocvelest-damp130-28042023\\\\'\n",
+    "fname = 'phase_sul_2022_8P_fix_sta-rms5.dat'\n",
+    "fname2 = 'temppha_phase_sul_2022_8P_fix_sta-rms5.txt'\n",
+    "fname3 = 'tempwadati_phase_sul_2022_8P_fix_sta-rms5.txt'\n",
     "deviation = 9.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,15 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VP/VS = 1.7665616072517856\n",
-      "R-square = 0.9766163223357679\n"
+      "VP/VS = 1.7653324367545147\n",
+      "R-square = 0.9755771631288414\n"
      ]
     }
    ],
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,24 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Int64Index([ 18148,  47034,  50869,  57531,  57999,  58444,  64086,  66401,\n",
-       "             71386,  71412,  72095,  73765,  75677,  75719,  76167,  79983,\n",
-       "             84743,  94460,  94750, 106661, 110447, 111937, 114556, 114646,\n",
-       "            115600, 115996, 127619, 131970, 135503, 137723, 141174, 144082,\n",
-       "            150760, 154497, 157527, 160023, 171976, 173438, 177531, 177748,\n",
-       "            182298, 183444, 185567, 185974, 186163, 198284, 199972, 202718,\n",
-       "            203006, 209298, 209457, 209965, 213667, 214066, 222628, 224955,\n",
-       "            226873, 229072, 229858, 238463, 240177],\n",
+       "Int64Index([ 17670,  39855,  42761,  49187,  49780,  54517,  56727,  61629,\n",
+       "             62294,  63963,  65792,  65832,  66268,  76167,  85090,  93991,\n",
+       "             94923,  96299,  97449, 100481, 102172, 103661, 105042, 109854,\n",
+       "            114636, 115814, 120764, 124919, 124955, 126667, 130394, 131327,\n",
+       "            137130],\n",
        "           dtype='int64')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,93 +141,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "event: 1100 -- index:18150 --> TMSI Phase:S dropped\n",
-      "event: 2869 -- index:47041 --> SGSI Phase:S dropped\n",
-      "event: 3094 -- index:50886 --> KMSI Phase:S dropped\n",
-      "event: 3449 -- index:57542 --> SPSI Phase:S dropped\n",
-      "event: 3476 -- index:58007 --> PCI Phase:S dropped\n",
-      "event: 3501 -- index:58452 --> SPSI Phase:S dropped\n",
-      "event: 3813 -- index:64093 --> PMSI Phase:S dropped\n",
-      "event: 3938 -- index:66403 --> TNTI Phase:S dropped\n",
-      "event: 4205 -- index:71396 --> LUWI Phase:S dropped\n",
-      "event: 4207 -- index:71416 --> KMSI Phase:S dropped\n",
-      "event: 4207 -- index:71422 --> SRSI Phase:S dropped\n",
-      "event: 4207 -- index:71424 --> TOLI2 Phase:S dropped\n",
-      "event: 4240 -- index:72099 --> MRSI Phase:S dropped\n",
-      "event: 4240 -- index:72101 --> LUWI Phase:S dropped\n",
-      "event: 4328 -- index:73769 --> TMSI Phase:S dropped\n",
-      "event: 4423 -- index:75686 --> PSSI Phase:S dropped\n",
-      "event: 4426 -- index:75721 --> KMSI Phase:S dropped\n",
-      "event: 4444 -- index:76185 --> LUWI Phase:S dropped\n",
-      "event: 4637 -- index:79989 --> PSSI Phase:S dropped\n",
-      "event: 4881 -- index:84761 --> DBNI Phase:S dropped\n",
-      "event: 5244 -- index:94513 --> MMSI Phase:S dropped\n",
-      "event: 5244 -- index:94515 --> LSCM Phase:S dropped\n",
-      "event: 5256 -- index:94766 --> MPSI Phase:S dropped\n",
-      "event: 5256 -- index:94768 --> LOCM Phase:S dropped\n",
-      "event: 5683 -- index:106677 --> MSCM Phase:S dropped\n",
-      "event: 5835 -- index:110459 --> SANI Phase:S dropped\n",
-      "event: 5890 -- index:111939 --> PBCI Phase:S dropped\n",
-      "event: 6002 -- index:114583 --> SWCM Phase:S dropped\n",
-      "event: 6006 -- index:114713 --> SDCI Phase:S dropped\n",
-      "event: 6042 -- index:115602 --> JHMI Phase:S dropped\n",
-      "event: 6042 -- index:115612 --> KMSI Phase:S dropped\n",
-      "event: 6057 -- index:116034 --> PMSI Phase:S dropped\n",
-      "event: 6519 -- index:127652 --> PCI Phase:S dropped\n",
-      "event: 6691 -- index:131972 --> TPCI Phase:S dropped\n",
-      "event: 6834 -- index:135523 --> MMCI Phase:S dropped\n",
-      "event: 6913 -- index:137742 --> LUWI Phase:S dropped\n",
-      "event: 7048 -- index:141176 --> LOCM Phase:S dropped\n",
-      "event: 7048 -- index:141178 --> LUCM Phase:S dropped\n",
-      "event: 7048 -- index:141180 --> POCI Phase:S dropped\n",
-      "event: 7048 -- index:141182 --> RDCM Phase:S dropped\n",
-      "event: 7155 -- index:144084 --> PSSI Phase:S dropped\n",
-      "event: 7404 -- index:150775 --> PMMI Phase:S dropped\n",
-      "event: 7404 -- index:150780 --> SANI Phase:S dropped\n",
-      "event: 7404 -- index:150782 --> OBMI Phase:S dropped\n",
-      "event: 7404 -- index:150784 --> LOCM Phase:S dropped\n",
-      "event: 7404 -- index:150786 --> TOCM Phase:S dropped\n",
-      "event: 7404 -- index:150788 --> SRSI Phase:S dropped\n",
-      "event: 7535 -- index:154513 --> PSSI Phase:S dropped\n",
-      "event: 7619 -- index:157543 --> BLCM Phase:S dropped\n",
-      "event: 7619 -- index:157551 --> BDCM Phase:S dropped\n",
-      "event: 7682 -- index:160055 --> LOCM Phase:S dropped\n",
-      "event: 8107 -- index:171996 --> MGAI Phase:S dropped\n",
-      "event: 8153 -- index:173445 --> KMBFM Phase:S dropped\n",
-      "event: 8153 -- index:173448 --> OMBFM Phase:S dropped\n",
-      "event: 8153 -- index:173455 --> LBNFM Phase:S dropped\n",
-      "event: 8153 -- index:173458 --> DBNFM Phase:S dropped\n",
-      "event: 8286 -- index:177538 --> TPCI Phase:S dropped\n",
-      "event: 8294 -- index:177769 --> WMCM Phase:S dropped\n",
-      "event: 8450 -- index:182308 --> BDCM Phase:S dropped\n",
-      "event: 8490 -- index:183450 --> RDCM Phase:S dropped\n",
-      "event: 8557 -- index:185575 --> GTOI Phase:S dropped\n",
-      "event: 8574 -- index:185984 --> BBCI Phase:S dropped\n",
-      "event: 8578 -- index:186171 --> SANI Phase:S dropped\n",
-      "event: 8965 -- index:198288 --> UKCM Phase:S dropped\n",
-      "event: 9019 -- index:199998 --> LBFI Phase:S dropped\n",
-      "event: 9096 -- index:202742 --> PDLI Phase:S dropped\n",
-      "event: 9104 -- index:203037 --> BUKI Phase:S dropped\n",
-      "event: 9303 -- index:209320 --> TBMCM Phase:S dropped\n",
-      "event: 9310 -- index:209465 --> PSSI Phase:S dropped\n",
-      "event: 9329 -- index:209987 --> BUKI Phase:S dropped\n",
-      "event: 9445 -- index:213681 --> IHMI Phase:S dropped\n",
-      "event: 9460 -- index:214084 --> PSSI Phase:S dropped\n",
-      "event: 9716 -- index:222671 --> APSI Phase:S dropped\n",
-      "event: 9786 -- index:224970 --> LUWI Phase:S dropped\n",
-      "event: 9847 -- index:226889 --> MMCI Phase:S dropped\n",
-      "event: 9924 -- index:229109 --> BNSI Phase:S dropped\n",
-      "event: 9948 -- index:229860 --> POCI Phase:S dropped\n",
-      "event: 9948 -- index:229862 --> LUCM Phase:S dropped\n",
-      "event: 10253 -- index:238483 --> LBMI Phase:S dropped\n",
-      "event: 10316 -- index:240192 --> JHMI Phase:S dropped\n"
+      "event: 1100 -- index:17672 --> TMSI Phase:S dropped\n",
+      "event: 2628 -- index:39870 --> GTOI Phase:S dropped\n",
+      "event: 2869 -- index:42768 --> SGSI Phase:S dropped\n",
+      "event: 3449 -- index:49198 --> SPSI Phase:S dropped\n",
+      "event: 3501 -- index:49788 --> SPSI Phase:S dropped\n",
+      "event: 3813 -- index:54524 --> PMSI Phase:S dropped\n",
+      "event: 3938 -- index:56729 --> TNTI Phase:S dropped\n",
+      "event: 4207 -- index:61633 --> KMSI Phase:S dropped\n",
+      "event: 4207 -- index:61638 --> SRSI Phase:S dropped\n",
+      "event: 4207 -- index:61640 --> TOLI2 Phase:S dropped\n",
+      "event: 4240 -- index:62298 --> MRSI Phase:S dropped\n",
+      "event: 4240 -- index:62300 --> LUWI Phase:S dropped\n",
+      "event: 4328 -- index:63967 --> TMSI Phase:S dropped\n",
+      "event: 4423 -- index:65800 --> PSSI Phase:S dropped\n",
+      "event: 4426 -- index:65834 --> KMSI Phase:S dropped\n",
+      "event: 4444 -- index:66286 --> LUWI Phase:S dropped\n",
+      "event: 5256 -- index:76170 --> MPSI Phase:S dropped\n",
+      "event: 5256 -- index:76172 --> LOCM Phase:S dropped\n",
+      "event: 6006 -- index:85118 --> SDCI Phase:S dropped\n",
+      "event: 6834 -- index:94011 --> MMCI Phase:S dropped\n",
+      "event: 6913 -- index:94940 --> LUWI Phase:S dropped\n",
+      "event: 7048 -- index:96301 --> LOCM Phase:S dropped\n",
+      "event: 7048 -- index:96303 --> LUCM Phase:S dropped\n",
+      "event: 7048 -- index:96305 --> POCI Phase:S dropped\n",
+      "event: 7048 -- index:96307 --> RDCM Phase:S dropped\n",
+      "event: 7155 -- index:97451 --> PSSI Phase:S dropped\n",
+      "event: 7404 -- index:100487 --> LOCM Phase:S dropped\n",
+      "event: 7404 -- index:100489 --> TOCM Phase:S dropped\n",
+      "event: 7404 -- index:100491 --> SRSI Phase:S dropped\n",
+      "event: 7535 -- index:102181 --> PSSI Phase:S dropped\n",
+      "event: 7619 -- index:103674 --> BLCM Phase:S dropped\n",
+      "event: 7619 -- index:103682 --> BDCM Phase:S dropped\n",
+      "event: 7682 -- index:105061 --> LOCM Phase:S dropped\n",
+      "event: 8107 -- index:109874 --> MGAI Phase:S dropped\n",
+      "event: 8490 -- index:114639 --> RDCM Phase:S dropped\n",
+      "event: 8578 -- index:115822 --> SANI Phase:S dropped\n",
+      "event: 8965 -- index:120768 --> UKCM Phase:S dropped\n",
+      "event: 9303 -- index:124925 --> TBMCM Phase:S dropped\n",
+      "event: 9310 -- index:124963 --> PSSI Phase:S dropped\n",
+      "event: 9445 -- index:126681 --> IHMI Phase:S dropped\n",
+      "event: 9716 -- index:130408 --> APSI Phase:S dropped\n",
+      "event: 9786 -- index:131342 --> LUWI Phase:S dropped\n",
+      "event: 10316 -- index:137142 --> JHMI Phase:S dropped\n"
      ]
     }
    ],
@@ -254,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output finish: temppha_phase_sul_2022_8P_fix_wadatifilter.dat at G:\\My Drive\\Tomography\\270423\\\n",
+      "Output finish: phase_sul_2022_8P_fix_sta-rms5_wadatifilter.dat at G:\\My Drive\\Tomography\\280423\\output-tomodd-relocvelest-damp130-28042023\\\n",
       "== data filter\n",
-      "! temppha_phase_sul_2022_8P_fix_wadatifilter.dat\n",
+      "! phase_sul_2022_8P_fix_sta-rms5_wadatifilter.dat\n",
       "---------------------------\n",
       "start time        : 2017-01-02 17:16:39.400000\n",
       "end time          : 2022-12-31 22:21:43.900000\n",
@@ -271,16 +242,16 @@
       "maximum magnitude : 7.39\n",
       "minimum depth     : 1 km\n",
       "maximum depth     : 750 km\n",
-      "station used      : 137\n",
+      "station used      : 128\n",
       "---------------------------\n",
       "Event :  10421\n",
-      "Phase : 232646\n",
-      "-- P  : 192121\n",
-      "-- S  :  40226\n",
-      "-- Pg :    155\n",
-      "-- Sg :    119\n",
-      "-- Pn :     18\n",
-      "-- pP :      7\n",
+      "Phase : 127774\n",
+      "-- P  : 103494\n",
+      "-- S  :  24101\n",
+      "-- Pg :    103\n",
+      "-- Sg :     60\n",
+      "-- Pn :     15\n",
+      "-- pP :      1\n",
       "---------------------------\n"
      ]
     }
