--- a/compareRESIDUAL.ipynb
+++ b/compareRESIDUAL.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nCoding: PYTHON UTF-8\\nCreated On: 2023-07-09 18:51:50\\nAuthor: Putu Hendra Widyadharma\\n=== compare .res before relocation and after relocation to have same event pairs\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Coding: PYTHON UTF-8\n",
@@ -27,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,23 +24,24 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from localfunction import *\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"G:\\\\My Drive\\\\IUGG Seminar\\\\data\\\\data_poster\\\\reloc_ttdistfilter\\\\tes-250\\\\\"\n",
+    "path = \"D:\\\\BMKG Files\\\\IUGG Seminar\\\\data\\\\data_poster\\\\reloc_ttdistfilter\\\\tes-250\\\\\"\n",
     "res_before_fname = \"hypoDD_before.res\"\n",
     "res_after_fname = \"hypoDD.res\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,21 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "==read before\n",
-      "read file success\n",
-      "==read after\n",
-      "read file success\n",
-      "== dataframe output created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"==read before\")\n",
     "df1 = data(res_before_fname) # df to be compared\n",
@@ -110,40 +88,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "row1 number 0 not dropped\n",
-      "row1 number 1 not dropped\n",
-      "row1 number 2 not dropped\n",
-      "row1 number 4 not dropped\n",
-      "row1 number 5 not dropped\n",
-      "row1 number 6 not dropped\n",
-      "row1 number 7 not dropped\n",
-      "row1 number 8 not dropped\n",
-      "row1 number 9 not dropped\n",
-      "row1 number 10 not dropped\n",
-      "row1 number 11 not dropped\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# compare\n",
     "for i, row1 in df1.iterrows():\n",
-    "    for j, row2 in df2.iterrows():\n",
-    "        if ((row1['STA'] == row2['STA']) and \n",
-    "            (row1['C1'] == row2['C1']) and \n",
-    "            (row1['C2'] == row2['C2']) and\n",
-    "            (row1['IDX'] == row2['IDX'])):\n",
-    "            print(f\"row1 number {i} not dropped\")\n",
-    "            df_result = pd.concat([df_result,row1.to_frame().T],ignore_index=True)\n",
-    "            break\n",
+    "    df2_iter = df2[df2['C1'] == row1['C1']]\n",
+    "    # for j, row2 in tqdm(df2_iter.iterrows(), total=df2_iter.shape[0], desc=f\"search row {i}:\"):\n",
+    "    for j, row2 in df2_iter.iterrows():\n",
+    "        if (row2['C1'] <= row1['C1']):\n",
+    "            if ((row1['STA'] == row2['STA']) and \n",
+    "                (row1['C1'] == row2['C1']) and \n",
+    "                (row1['C2'] == row2['C2']) and\n",
+    "                (row1['IDX'] == row2['IDX'])):\n",
+    "                print(f\"df1 row number {i} found\")\n",
+    "                df_result = pd.concat([df_result,row1.to_frame().T],ignore_index=True)\n",
+    "                break\n",
+    "            else:\n",
+    "                pass\n",
     "        else:\n",
-    "            pass"
+    "            break"
    ]
   },
   {
@@ -155,7 +120,7 @@
     "#output\n",
     "df_result.drop(['OFFS'],axis=1,inplace=True)\n",
     "df_result.columns = ['STA', 'DT', 'C1', 'C2', 'IDX', 'QUAL', 'RES [ms]', 'WT', 'OFFS']\n",
-    "df_result.to_csv(path+Path(res_before_fname).stem+'_filter.res',sep='\\t',index=None)"
+    "df_result.to_csv(path+Path(res_before_fname).stem+'_filter_all.res',sep='\\t',index=None)"
    ]
   }
  ],
@@ -175,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
